# ShippingDataProduct

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  docker_requirements.txt  pyproject.toml  requirements.txt
.dvc/: config
.github/workflows/: unittests.yml
ShippingData/: README.md  dbt_project.yml
ShippingData/analyses/: top3_most_mentioned_products_per_channel.sql
ShippingData/macros/: schema_macros.yml
ShippingData/models/analysis/: health_related_topic_trend.sql  media_coverage_by_channel.sql  product_price_per_channel.sql  schema.yml  top3_most_mentioned_products_per_channel.sql  top_products.sql
ShippingData/models/mart/: dim_channel.sql  dim_dates.sql  dim_message_metadata.sql  dim_product_mention.sql  fct_media.sql  fct_messages.sql  schema.yml
ShippingData/models/staging/: schema.yml  stg_media_detections.sql  stg_telegram_messages.sql
analytics_api/: README.md  crud.py  database.py  main.py  models.py  schemas.py
config/: config.py
dagster_pipeline/: README.md  jobs.py  ops.py  repository.py  schedules.py
data/: README.md
data/processed/: media_detection_results.json.dvc
data/raw/: media_index_2025-07-12.json.dvc  telegram_media.dvc
docs/: README.md
notebooks/: README.md  scrapped_messages_display.ipynb  yolo_test.ipynb
scripts/: README.md  create_tables.py  enrich_telegram_messages.py  load_media_detections.py  load_media_index.py  load_messages.py
src/models/: run_yolov8_detection.py
src/services/: initialize_session.py  telegram_scrapper.py
src/utils/: Extractors.py
tests/unit/: test_extractors.py
(+3 files in other folders)
